gcc/testsuite/gm2/pim/fail/badprocedure.mod
MODULE badprocedure ;

IMPORT FIO ;

BEGIN
   FIO.WriteLn (FIO.StdOut)
END badprocedure.
